@startuml schema

skinparam linetype ortho
left to right direction
hide empty members
hide circles
hide <<abstract>> stereotype
hide <<entity>> stereotype
hide <<relationship>> stereotype

<style>
  classDiagram {
    LineColor #404040
    class {
      .abstract {
        LineColor #4f63b3
        LineStyle 2
        FontColor #4f63b3
        BackgroundColor aliceblue
        header {
          FontStyle italic
        }
      }
      .relationship {
        BackgroundColor #c3fae0
        LineColor #466b5a
        FontColor #466b5a
        header {
          FontStyle bold
        }
      }
    }
  }
</style>

title Schéma E/R de la base de données
footer 2024 — Ibrahime CAMARA & Julien TROGNON


' Utilisateurs
class Utilisateur <<abstract>> {
  <b>id
  email
  mdp
  pseudo
  nom
  prenom
}

class Gerant

class Client {
  date_inscription
  points
  naissance
}


diamond diamondUtilisateur

Utilisateur <|-right- "total" diamondUtilisateur
diamondUtilisateur -up- Gerant
diamondUtilisateur -down- Client


' Cadeaux
class Cadeau {
  <b>id
  nom
  description
  prix
  stock
}


' Panier
class Panier {
  <b>id
  date_archive
}

Client *-- "1" Panier
Client "1" --* Panier


class Contenu <<relationship>>

Panier *-- Contenu
Contenu - "0..n" Cadeau



@enduml